--- a/page1-2.html
+++ b/page1-2.html
@@ -152,7 +152,7 @@
     <div style="position: absolute; top: 60%; left: 800px; transform: translateY(-50%); text-align: left; color: wheat; z-index: 2;">
         <div style="max-width: 1000px; font-size: 18px; line-height: 1.6;">
             <p>Chỉ số của Bijan khi đầy đủ trang bị:</p>
-            <img src="top2.jpg" alt="Bijan đường trên" style="max-width: 480px; height: auto; margin: 20px 0; border: 3px solid wheat; border-radius: 10px;">
+            <img src="jung2.jpg" alt="Bijan đường trên" style="max-width: 480px; height: auto; margin: 20px 0; border: 3px solid wheat; border-radius: 10px;">
         </div>
     </div>
 </div>
