--- a/page1-2.html
+++ b/page1-2.html
@@ -141,7 +141,7 @@
     <div style="max-width: 700px; font-size: 18px; line-height: 1.6;">
         <p>Build đồ phổ biến nhất bao gồm những trang bị sau: Kiếm Truy hồn, Giày kiên cường, Thương longlinus, Phức hợp kiếm, Nanh fernir, và Giáp hồi sinh. Đi rừng thì phải cầm trừng trị thôi ( Trừ khi bạn là Lai Bâng cầm tốc biến đi rừng )</p>
 
-        <img src="jung.JPG" alt="Trang bị đi rừng" style="max-width: 100%; height: auto; margin: 20px 0; border: 3px solid wheat; border-radius: 10px;">
+        <img src="jung.jpg" alt="Trang bị đi rừng" style="max-width: 100%; height: auto; margin: 20px 0; border: 3px solid wheat; border-radius: 10px;">
 
         <p>Build đồ đi rừng này cũng có những trang bị điển hình là những trang bị tăng sát thương vật lý, giúp bijan thăng tiến sức mạnh nhanh chóng và kiểm soát mục tiêu lớn trên bản đồ tốt hơn </p>
         </ul>
