--- a/page1-3.html
+++ b/page1-3.html
@@ -141,7 +141,7 @@
     <div style="max-width: 700px; font-size: 18px; line-height: 1.6;">
         <p>Build đồ phổ biến nhất bao gồm những trang bị sau: Đại địa mở trói, Giày kiên cường, Đao truy hồn ,Huân trương troy, Giáp thống khổ, Giáp hồi sinh </p>
 
-        <img src="sp.JPG" alt="Trang bị đi sp" style="max-width: 100%; height: auto; margin: 20px 0; border: 3px solid wheat; border-radius: 10px;">
+        <img src="sp.jpg" alt="Trang bị đi sp" style="max-width: 100%; height: auto; margin: 20px 0; border: 3px solid wheat; border-radius: 10px;">
 
         <p>Build đồ đi rừng này cũng có những trang bị điển hình là những trang bị tăng máu và song giáp,cộng dồn với nội tại thì Bijan sẽ trở nên một thằng tanker khủng khiếp. </p>
         </ul>
